agrega estilos e imagenes

--- a/apple-servicio-tecnico.html
+++ b/apple-servicio-tecnico.html
@@ -5,8 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicio Técnico Apple</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/bs-5.css">
 </head>
 <body>
-    
+    <div class="landing bs-5">
+        <div class="container-fluid">
+            <div class="continaer">
+                <div class="row">
+                    <div class="col-12"><img src="img/via.placeholder.png" alt="" class="img-fluid"></div>
+                </div>
+                <div class="row d-flex align-items-center justify-content-center text-center">
+                    <div class="col-12 col-md-8">
+                        <h1>Servicio Técnico Apple</h1>
+                        <p>texto descriptivo</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <h2>Tiendas</h2>
+                        <img src="" alt="" class="img-fluid">
+                        <p>texto tiendas</p>
+                        <iframe src="" frameborder="0"></iframe>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <h2>Tiendas</h2>
+                        <img src="" alt="" class="img-fluid">
+                        <p>texto tiendas</p>
+                        <iframe src="" frameborder="0"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
