--- a/index.html
+++ b/index.html
@@ -6,34 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicio Técnico Apple</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="/css/bs-5.css">
 </head>
 <body>
-    <div class="landing bs-5">
-        <div class="container-fluid">
-            <div class="continaer">
+    <div class="landing m-0 p-0">
+        <div class="bs-5">
+            <div class="container-fluid mt-0 mx-0 pt-0 px-0 mb-5">
                 <div class="row">
                     <div class="col-12"><img src="img/via.placeholder.png" alt="" class="img-fluid"></div>
                 </div>
-                <div class="row d-flex align-items-center justify-content-center text-center">
-                    <div class="col-12 col-md-8">
-                        <h1>Servicio Técnico Apple</h1>
-                        <p>texto descriptivo</p>
+            </div>
+            <div class="container-fluid">
+                <div class="container">
+                    <div class="row d-flex align-items-center justify-content-center text-center my-5">
+                        <div class="col-12 col-md-8">
+                            <h1>Servicio Técnico Apple</h1>
+                            <p>texto descriptivo</p>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-md-6">
-                        <h2>Tiendas</h2>
-                        <img src="" alt="" class="img-fluid">
-                        <p>texto tiendas</p>
-                        <iframe src="" frameborder="0"></iframe>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <h2>Tiendas</h2>
-                        <img src="" alt="" class="img-fluid">
-                        <p>texto tiendas</p>
-                        <iframe src="" frameborder="0"></iframe>
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-12 col-md-6">
+                            <h2>Antofagasta</h2>
+                            <img src="img/Antofagasta-1.jpeg" alt="" class="images-stores">
+                            <p>Balmaceda 2472</p>
+                            <p> Lunes a Viernes de 10:00 a 19:30 Hrs</p>
+                            <p>Sábado de 10:00 a 14:00 Hrs</p>
+                                
+                            <iframe src="" frameborder="0"></iframe>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <h2>Agustinas</h2>
+                            <img src="img/Agustinas-1.jpeg" alt="" class="images-stores">
+                            <p>Agustinas 818</p>
+                            <p>Lunes a Viernes de 09:00 a 19:00 Hrs</p>
+                            <iframe src="" frameborder="0"></iframe>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <h2>Manuel Montt </h2>
+                            <img src="img/MMontt-1.jpeg" alt="" class="images-stores">
+                            <p>Manuel Montt 170</p>
+                            <p>Tel: +562 2560 0000</p>
+                            <p>Lunes a Viernes de 09:00 a 19:30 Hrs</p>
+                            <p>Sábado de 10:00 a 14:00 Hrs</p>
+                            <iframe src="" frameborder="0"></iframe>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <h2>Rancagua</h2>
+                            <img src="img/Rancagua-1.jpeg" alt="" class="images-stores">
+                            <p>Independencia 499</p>
+                            <p>Lunes a Viernes de 10:00 a 19:30 Hrs</p>
+                            <p>Sábado de 10:00 a 14:00 Hrs</p>
+                            <iframe src="" frameborder="0"></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
