agrega iframes con google map y actualiza estilos y layout tiendas

--- a/index.html
+++ b/index.html
@@ -26,38 +26,45 @@
                         </div>
                     </div>
                     <div class="row d-flex justify-content-center">
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-3">
                             <h2>Antofagasta</h2>
                             <img src="img/Antofagasta-1.jpeg" alt="" class="images-stores">
-                            <p>Balmaceda 2472</p>
-                            <p> Lunes a Viernes de 10:00 a 19:30 Hrs</p>
-                            <p>Sábado de 10:00 a 14:00 Hrs</p>
-                                
-                            <iframe src="" frameborder="0"></iframe>
+                            <div class="info-store">
+                                <p>Balmaceda 2472</p>
+                                <p> Lunes a Viernes de 10:00 a 19:30 Hrs</p>
+                                <p>Sábado de 10:00 a 14:00 Hrs</p>
+                            </div>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.8219408005943!2d-70.40274738440513!3d-23.64654697063026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96afd516050132c9%3A0x4d5e70f46c4ac5fa!2sAv.%20Balmaceda%202472%2C%20Antofagasta!5e0!3m2!1ses-419!2scl!4v1663777285706!5m2!1ses-419!2scl" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-3">
                             <h2>Agustinas</h2>
                             <img src="img/Agustinas-1.jpeg" alt="" class="images-stores">
-                            <p>Agustinas 818</p>
-                            <p>Lunes a Viernes de 09:00 a 19:00 Hrs</p>
-                            <iframe src="" frameborder="0"></iframe>
+                            <div class="info-store">
+                                <p>Agustinas 818</p>
+                                <p>Lunes a Viernes de 09:00 a 19:00 Hrs</p>
+                            </div>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.3327933761084!2d-70.65056788420233!3d-33.44063520439602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5a182898475%3A0x453ee3991c9e2b0f!2sAgustinas%20818%2C%20Santiago%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1663777398879!5m2!1ses-419!2scl" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-3">
                             <h2>Manuel Montt </h2>
                             <img src="img/MMontt-1.jpeg" alt="" class="images-stores">
-                            <p>Manuel Montt 170</p>
-                            <p>Tel: +562 2560 0000</p>
-                            <p>Lunes a Viernes de 09:00 a 19:30 Hrs</p>
-                            <p>Sábado de 10:00 a 14:00 Hrs</p>
-                            <iframe src="" frameborder="0"></iframe>
+                            <div class="info-store">
+                                <p>Manuel Montt 170</p>
+                                <p>Tel: +562 2560 0000</p>
+                                <p>Lunes a Viernes de 09:00 a 19:30 Hrs</p>
+                                <p>Sábado de 10:00 a 14:00 Hrs</p>
+                            </div>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.735386573744!2d-70.62128878420262!3d-33.43014250385769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662cf7d2c8bb83f%3A0x6c220d85ff04b219!2sAv.%20Manuel%20Montt%20170%2C%20Providencia%2C%207500591%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1663777436104!5m2!1ses-419!2scl" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-3">
                             <h2>Rancagua</h2>
                             <img src="img/Rancagua-1.jpeg" alt="" class="images-stores">
-                            <p>Independencia 499</p>
-                            <p>Lunes a Viernes de 10:00 a 19:30 Hrs</p>
-                            <p>Sábado de 10:00 a 14:00 Hrs</p>
-                            <iframe src="" frameborder="0"></iframe>
+                            <div class="info-store">
+                                <p>Independencia 499</p>
+                                <p>Lunes a Viernes de 10:00 a 19:30 Hrs</p>
+                                <p>Sábado de 10:00 a 14:00 Hrs</p>
+                            </div>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3301.0699979788915!2d-70.74674676824166!3d-34.170127980048235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9663433fe1d509dd%3A0xf9afe00ff8a24d86!2sP.%C2%BA%20Independencia%20499%2C%20Rancagua%2C%20O&#39;Higgins!5e0!3m2!1ses-419!2scl!4v1663777705162!5m2!1ses-419!2scl" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
