--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Servicio Técnico Apple</title>
 
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="/css/bs-5.css">
+    <link rel="stylesheet" href="css/bs-5.css">
 </head>
 <body>
     <div class="landing m-0 p-0">
